asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__reset__reset_soft_prompt.snap
---
source: src/gitui/tests/reset.rs
expression: ctx.redact_buffer()
---
 ba1a85d main add unwanted-file                                                 |
▌b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Soft reset to (default b66a0bf82020d6a386e94d0fceedec1f817d20c7): › q         |
styles_hash: 174798f428e40bd6
